<resources>
    <string name="app_name">Delivery Drop Navigation</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    
    <!--Navigation drawer menu labels-->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_about_us">About us</string>

    <!--Toolbar titles when navigation menu item is selected-->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Schedule</item>
        <item>Orders</item>
    </string-array>

    <string name="activity_title_about_us">About us</string>
    <string name="activity_title_privacy_policy">Privacy policy</string>
    <string name="action_clear_all">Clear all</string>
    <string name="action_log_out">Log out</string>
    <string name="action_mark_all_read">Mark all as read</string>
    <string name="privacy_policy">Privacy policy</string>

</resources>
