<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:id="@+id/nav_home" />
        <item android:title="@string/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:id="@+id/nav_profile" />
        <item android:title="@string/nav_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:id="@+id/nav_schedule" />
        <item android:title="@string/nav_orders"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:id="@+id/nav_orders" />
    </group>

    <item android:title="Other">
        <menu>
            <item android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item android:title="@string/privacy_policy"
                android:id="@+id/nav_privacy_policy" />
        </menu>
    </item>
</menu>